--- a/src/assets/scss/_footer.scss
+++ b/src/assets/scss/_footer.scss
@@ -17,7 +17,7 @@
                 margin-bottom: 20px;
             }
             p {
-                line-height: 1.5;
+                line-height: 2;
             }
         }
         .footer_info2 {
@@ -28,10 +28,53 @@
                 text-align: center;
                 margin-bottom: 15px;
             }
+            .bdshare-button-style0-24 a {
+                height: 30px;
+                padding-left: 35px;
+            }
+            .bdsharebuttonbox {
+                .bds_more {
+                    background: url(~images/more.png) no-repeat;
+                    background-size: contain;
+                }
+                .bds_tsina {
+                    background: url(~images/wb.png) no-repeat;
+                    background-size: contain;
+                }
+                .bds_sqq {
+                    background: url(~images/qq.png) no-repeat;
+                    background-size: contain;
+                }
+                .bds_qzone {
+                    background: url(~images/qzone.png) no-repeat;
+                    background-size: contain;
+                }
+                .bds_weixin {
+                    background: url(~images/wx.png) no-repeat;
+                    background-size: contain;
+                }
+            }
+
         }
         .footer_info3 {
             &>p {
                 @extend %footer_p1;
+            }
+            .footer_p2 {
+                margin-top: 15px;
+            }
+            .ant-row {
+                margin-top: -10px;
+            }
+            .ant-col-12,.ant-col-8 {
+                text-align: center;
+                font-size: 12px;
+                &>img {
+                    height: 60px;
+                }
+            }
+            .footer_img1 {
+                height: 200px;
             }
         }
     }
