--- a/src/assets/scss/_comm.scss
+++ b/src/assets/scss/_comm.scss
@@ -20,3 +20,20 @@ html {
 .line-overflow {
   @include line-overflow();
 }
+
+.index_footer {
+  background: #fff;
+  border-top: 1px solid #eee;
+  margin-top: 50px;
+}
+
+.imgAuto {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+%imgAuto {
+  display: block;
+  width: 100%;
+  height: auto;
+}
