--- a/src/assets/scss/_comm.scss
+++ b/src/assets/scss/_comm.scss
@@ -13,7 +13,7 @@ html {
 %dd_bg {
   background: #fff;
   border: 1px solid #ddd;
-  padding: 15px;
+  padding: 0 15px;
   @include border-radius(10px);
   @include box-shadow(0 1px 2px 1px rgba(0,0,0,.03));
 }
@@ -36,4 +36,10 @@ html {
   display: block;
   width: 100%;
   height: auto;
+}
+
+%title1 {
+  font-weight: bold;
+  font-size: $fontSize-18;
+  @include line-overflow();
 }
