--- a/src/assets/scss/_list.scss
+++ b/src/assets/scss/_list.scss
@@ -1,49 +1,73 @@
-.ant-list-item {
-    @extend %dd_bg;
-    .list_header {
-        position: absolute;
-    }
-    .list_cont1 {
-        padding-left: 50px;
-    }
-    .ant-row {
-        padding: 10px 0;
-    }
-    .list_content {
-        @include multiLine-overflow(3);
-    }
-    .list_cont2 {
-        .ant-card {
-            margin: 5px 0;
+#list_box {
+    .ant-list-item {
+        @extend %dd_bg;
+        .list_header {
+            position: absolute;
         }
-        .line-overflow {
-            margin-bottom: 5px;
+        .list_cont1 {
+            padding-left: 50px;
         }
-        .ant-card-cover {
-            height: 200px;
-            overflow: hidden;
-            img {
-                min-height: 200px;
+        .ant-row {
+            padding: 10px 0;
+            .tag_cont1 {
+                margin-top: 3px;
+                .ant-tag {
+                    margin-right: 0;
+                    margin-left: 0;
+                }
             }
         }
-    }
-    .list_cont3 {
-        border-top: 1px dotted #ddd;
-        .ant-row {
-            padding: 5px 0;
-            .ant-col-8 {
-                text-align: center;
-                &:last-child::before{
-                    display: none;
+        .list_content {
+            @include multiLine-overflow(3);
+        }
+        .list_cont4 {
+            margin-bottom: 2px;
+        }
+        .list_cont2 {
+            .ant-card {
+                margin: 5px 0;
+            }
+            .line-overflow {
+                margin-bottom: 5px;
+            }
+            .ant-card-cover {
+                height: 200px;
+                overflow: hidden;
+                img {
+                    min-height: 200px;
                 }
-                &::before {
-                    content: '';
-                    position: absolute;
-                    right: 0;
-                    top: 7px;
-                    width: 1px;
-                    height: 11px;
-                    background: #ddd;
+            }
+        }
+        .list_cont3 {
+            border-top: 1px dotted #ddd;
+            .ant-row {
+                padding: 5px 0;
+                .ant-col-8 {
+                    text-align: center;
+                    &:last-child::before{
+                        display: none;
+                    }
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        right: 0;
+                        top: 7px;
+                        width: 1px;
+                        height: 11px;
+                        background: #ddd;
+                    }
+                    .bdsharebuttonbox {
+                        text-align: center;
+                        .bds_more {
+                            float: none;
+                            width: 14px;
+                            height: 14px;
+                            margin: 0;
+                            background: url(~images/share.png) no-repeat;
+                            background-size: contain;
+                            font-size: $fontSize-14;
+                        }
+                    }
                 }
             }
         }
