diudiu_pc submit_190425

--- a/src/assets/scss/utilities/_pc-base.scss
+++ b/src/assets/scss/utilities/_pc-base.scss
@@ -18,7 +18,7 @@ body {
     // background-image: $bgImg;
     // background-size: cover;
     // overflow-x:hidden;
-    font:1.4rem $pcFont;
+    // font:1.4rem $pcFont;
     // touch-action: none;
 }
 h1,h2,h3,h4,h5,h6 {
