--- a/src/assets/scss/_releaseForm.scss
+++ b/src/assets/scss/_releaseForm.scss
@@ -14,7 +14,7 @@
         @include box-sizing();
     }
     .releaseForm_cont1 {
-        padding: 16px 0;
+        padding: 16px 0 10px 0;
         .ant-col-12,
         .ant-col-24 {
             margin-bottom: 15px;
@@ -29,5 +29,9 @@
                 }
             }
         }
+    }
+    .releaseForm_more {
+        text-align: center;
+        margin-bottom: 30px;
     }
 }
