--- a/src/assets/scss/_hotNewsList.scss
+++ b/src/assets/scss/_hotNewsList.scss
@@ -15,7 +15,7 @@ $imgHeight: 65px;
                     color: $size-color2;
                     @include line-overflow();
                 }
-                &>p {
+                p {
                     margin: 0 0 3px 0;
                     color: $size-color2;
                     @include multiLine-overflow(2);
