--- a/src/assets/scss/_releaseForm.scss
+++ b/src/assets/scss/_releaseForm.scss
@@ -34,4 +34,10 @@
         text-align: center;
         margin-bottom: 30px;
     }
+    .verCode_img {
+        display: inline-block;
+        height: 30px;
+        vertical-align: top;
+        margin-left: 5px;
+    }
 }
